# pdf-parser

./: .gitignore  Makefile  README.md  pyproject.toml
.cursor/rules/: llm-usage.mdc  ocr.mdc  product-overview.mdc  selenium-scraping.mdc  tech-stack.mdc  vision.mdc
scripts/: launch_chrome.py
src/bot/: browser.py  chrome_utils.py  config.py  llm.py  main.py  ocr.py  vision.py
tests/: browser_utils.py  conftest.py  flow_1_cloudflare.py  flow_2_print_pdf.py  flow_3_form_submit.py  test_cloudflare.py  test_ocr.py  test_template_matching.py  vision_utils.py
