[project]
name = "bot"
version = "0.1.0"
description = "Bot that answers form questions using PDF OCR and an LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "seleniumbase",
    "pdf2image",
    "pytesseract",
    "openai",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "pyright",
    "opencv-python-headless",
]

[project.scripts]
bot = "bot.main:main"

[tool.ruff]
target-version = "py311"
line-length = 160
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/flow_*.py" = ["E402"]  # path setup before bot imports

[tool.black]
target-version = ["py311"]
line-length = 160

[tool.pyright]
pythonVersion = "3.11"
reportMissingImports = "warning"  # seleniumbase, pytesseract lack stubs
reportGeneralTypeIssues = "warning"  # seleniumbase SB is a context manager, not class
reportArgumentType = "warning"  # BaseCase vs BrowserLike protocol (seleniumbase untyped)

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
